[package]
name = "atcoder-match"
version = "0.1.0"
authors = ["MasuqaT <occar@hotmail.co.jp>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "_"
path = "_.rs"

[workspace]
members = [
    "AtCoderBeginnerContest198",
    "AtCoderBeginnerContest199",
]
