[package]
name = "yukicoder"
version = "0.1.0"
authors = ["MasuqaT <occar@hotmail.co.jp>"]
edition = "2018"

[dependencies]

[[bin]]
name = "no227"
path = "src/no227.rs"

[[bin]]
name = "no24"
path = "src/no24.rs"

[[bin]]
name = "no345"
path = "src/no345.rs"

[[bin]]
name = "no83"
path = "src/no83.rs"

[[bin]]
name = "no172"
path = "src/no172.rs"

[[bin]]
name = "no47"
path = "src/no47.rs"

[[bin]]
name = "no311"
path = "src/no311.rs"