[package]
name = "yukicoder"
version = "0.1.0"
authors = ["MasuqaT <occar@hotmail.co.jp>"]
edition = "2018"

[dependencies]

[[bin]]
name = "no227"
path = "src/no227.rs"

[[bin]]
name = "no24"
path = "src/no24.rs"

[[bin]]
name = "no345"
path = "src/no345.rs"

[[bin]]
name = "no83"
path = "src/no83.rs"

[[bin]]
name = "no172"
path = "src/no172.rs"

[[bin]]
name = "no47"
path = "src/no47.rs"

[[bin]]
name = "no311"
path = "src/no311.rs"

[[bin]]
name = "no796"
path = "src/no796.rs"

[[bin]]
name = "no179"
path = "src/no179.rs"

[[bin]]
name = "no365"
path = "src/no365.rs"

[[bin]]
name = "no314"
path = "src/no314.rs"

[[bin]]
name = "no374"
path = "src/no374.rs"

[[bin]]
name = "no312"
path = "src/no312.rs"

[[bin]]
name = "no144"
path = "src/no144.rs"

[[bin]]
name = "no327"
path = "src/no327.rs"

[[bin]]
name = "no420"
path = "src/no420.rs"

[[bin]]
name = "no3"
path = "src/no3.rs"

[[bin]]
name = "no316"
path = "src/no316.rs"