[package]
name = "AtCoderBeginnerContest198"
version = "0.1.0"
authors = ["MasuqaT <occar@hotmail.co.jp>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "abc198_a"
path = "abc198_a.rs"

[[bin]]
name = "abc198_b"
path = "abc198_b.rs"

[[bin]]
name = "abc198_c"
path = "abc198_c.rs"

[[bin]]
name = "abc198_e"
path = "abc198_e.rs"
