[package]
name = "AtCoderBeginnerContest203"
version = "0.1.0"
authors = ["MasuqaT <occar@hotmail.co.jp>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "abc203_a"
path = "abc203_a.rs"

[[bin]]
name = "abc203_b"
path = "abc203_b.rs"

[[bin]]
name = "abc203_c"
path = "abc203_c.rs"

[[bin]]
name = "abc203_d"
path = "abc203_d.rs"

[[bin]]
name = "abc203_e"
path = "abc203_e.rs"
