[package]
name = "AtCoderBeginnerContest205"
version = "0.1.0"
authors = ["MasuqaT <occar@hotmail.co.jp>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "abc205_a"
path = "abc205_a.rs"

[[bin]]
name = "abc205_b"
path = "abc205_b.rs"

[[bin]]
name = "abc205_c"
path = "abc205_c.rs"

[[bin]]
name = "abc205_d"
path = "abc205_d.rs"
