[package]
name = "AtCoderBeginnerContest206"
version = "0.1.0"
authors = ["MasuqaT <occar@hotmail.co.jp>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "abc206_a"
path = "abc206_a.rs"

[[bin]]
name = "abc206_b"
path = "abc206_b.rs"

[[bin]]
name = "abc206_c"
path = "abc206_c.rs"

[[bin]]
name = "abc206_d"
path = "abc206_d.rs"

[[bin]]
name = "abc206_e"
path = "abc206_e.rs"
