[package]
name = "AtCoderBeginnerContest207"
version = "0.1.0"
authors = ["MasuqaT <occar@hotmail.co.jp>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "abc207_a"
path = "abc207_a.rs"

[[bin]]
name = "abc207_b"
path = "abc207_b.rs"

[[bin]]
name = "abc207_c"
path = "abc207_c.rs"

[[bin]]
name = "abc207_d"
path = "abc207_d.rs"
