[package]
name = "abs"
version = "0.1.0"
authors = ["MasuqaT <occar@hotmail.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "practice_1"
path = "practice_1.rs"

[[bin]]
name = "abc086_a"
path = "abc086_a.rs"
