[package]
name = "abs"
version = "0.1.0"
authors = ["MasuqaT <occar@hotmail.co.jp>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "practice_1"
path = "practice_1.rs"

[[bin]]
name = "abc086_a"
path = "abc086_a.rs"

[[bin]]
name = "abc081_a"
path = "abc081_a.rs"

[[bin]]
name = "abc081_b"
path = "abc081_b.rs"

[[bin]]
name = "abc087_b"
path = "abc087_b.rs"

[[bin]]
name = "abc083_b"
path = "abc083_b.rs"

[[bin]]
name = "abc088_b"
path = "abc088_b.rs"

[[bin]]
name = "abc085_b"
path = "abc085_b.rs"

[[bin]]
name = "abc085_c"
path = "abc085_c.rs"

[[bin]]
name = "abc049_c"
path = "abc049_c.rs"

[[bin]]
name = "abc086_c"
path = "abc086_c.rs"
