[package]
name = "match-revisit"
version = "0.1.0"
authors = ["MasuqaT <occar@hotmail.co.jp>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "abc203_d"
path = "src/abc203_d.rs"

[[bin]]
name = "abc203_d2"
path = "src/abc203_d2.rs"

[[bin]]
name = "abc205_d"
path = "src/abc205_d.rs"

[[bin]]
name = "abc206_d"
path = "src/abc206_d.rs"

[[bin]]
name = "abc207_d"
path = "src/abc207_d.rs"

[[bin]]
name = "abc209_d"
path = "src/abc209_d.rs"

[[bin]]
name = "abc210_e"
path = "src/abc210_e.rs"
