[package]
name = "match-revisit"
version = "0.1.0"
authors = ["MasuqaT <occar@hotmail.co.jp>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "abc203_d"
path = "src/abc203_d.rs"

[[bin]]
name = "abc203_d2"
path = "src/abc203_d2.rs"

[[bin]]
name = "abc205_d"
path = "src/abc205_d.rs"

[[bin]]
name = "abc206_d"
path = "src/abc206_d.rs"

[[bin]]
name = "abc207_d"
path = "src/abc207_d.rs"

[[bin]]
name = "abc209_d"
path = "src/abc209_d.rs"

[[bin]]
name = "abc210_d"
path = "src/abc210_d.rs"

[[bin]]
name = "abc210_e"
path = "src/abc210_e.rs"

[[bin]]
name = "abc120_c"
path = "src/arc120_c.rs"

[[bin]]
name = "abc211_e"
path = "src/abc211_e.rs"

[[bin]]
name = "arc124_b"
path = "src/arc124_b.rs"

[[bin]]
name = "arc124_c"
path = "src/arc124_c.rs"

[[bin]]
name = "abc213_e"
path = "src/abc213_e.rs"

[[bin]]
name = "abc213_e2"
path = "src/abc213_e2.rs"

[[bin]]
name = "abc213_e3"
path = "src/abc213_e3.rs"

[[bin]]
name = "abc214_d"
path = "src/abc214_d.rs"

[[bin]]
name = "abc215_d"
path = "src/abc215_d.rs"

[[bin]]
name = "abc215_e"
path = "src/abc215_e.rs"

[[bin]]
name = "abc215_e2"
path = "src/abc215_e2.rs"

[[bin]]
name = "abc215_f"
path = "src/abc215_f.rs"

[[bin]]
name = "arc125_b"
path = "src/arc125_b.rs"

[[bin]]
name = "abc216_e"
path = "src/abc216_e.rs"

[[bin]]
name = "abc216_e2"
path = "src/abc216_e2.rs"

[[bin]]
name = "abc217_d"
path = "src/abc217_d.rs"

[[bin]]
name = "abc221_e"
path = "src/abc221_e.rs"

[[bin]]
name = "abc224_c"
path = "src/abc224_c.rs"

[[bin]]
name = "abc224_d"
path = "src/abc224_d.rs"

[[bin]]
name = "abc224_e"
path = "src/abc224_e.rs"
