[package]
name = "temporary"
version = "0.1.0"
authors = ["MasuqaT <occar@hotmail.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "code_festival_2017_quala_a"
path = "src/code_festival_2017_quala_a.rs"

[[bin]]
name = "arc019_1"
path = "src/arc019_1.rs"

[[bin]]
name = "arc115_b"
path = "src/arc115_b.rs"

[[bin]]
name = "arc116_c"
path = "src/arc116_c.rs"
