[package]
name = "temporary"
version = "0.1.0"
authors = ["MasuqaT <occar@hotmail.co.jp>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "code_festival_2017_quala_a"
path = "src/code_festival_2017_quala_a.rs"

[[bin]]
name = "arc019_1"
path = "src/arc019_1.rs"

[[bin]]
name = "arc115_b"
path = "src/arc115_b.rs"

[[bin]]
name = "arc116_c"
path = "src/arc116_c.rs"

[[bin]]
name = "arc116_c2"
path = "src/arc116_c2.rs"

[[bin]]
name = "codefestival_2016_final_a"
path = "src/codefestival_2016_final_a.rs"

[[bin]]
name = "arc118_c"
path = "src/arc118_c.rs"

[[bin]]
name = "gigacode_2019_d"
path = "src/gigacode_2019_d.rs"

[[bin]]
name = "arc120_a"
path = "src/arc120_a.rs"

[[bin]]
name = "arc118_a"
path = "src/arc118_a.rs"

[[bin]]
name = "joi2009ho_b"
path = "src/joi2009ho_b.rs"

[[bin]]
name = "arc048_a"
path = "src/arc048_a.rs"

[[bin]]
name = "arc119_b"
path = "src/arc119_b-.rs"

[[bin]]
name = "abc203_d"
path = "src/abc203_d.rs"

[[bin]]
name = "arc122_a-"
path = "src/arc122_a-.rs"
