[package]
name = "codeforces-virtual-match"
version = "0.1.0"
authors = ["MasuqaT <occar@hotmail.co.jp>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "_"
path = "_.rs"

[workspace]
members = [
    "social20210906",
    "social20210913",
    "social20211005",
    "social20211011",
    "social20211018",
    "social20211025",
    "social20211101",
    "social20211108",
    "social20211115",
]
