[package]
name = "carefully_selected_past_problems_100_plus_50"
version = "0.1.0"
authors = ["MasuqaT <occar@hotmail.co.jp>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "_"
path = "_.rs"

[workspace]
members = [
    "beginner_intermediate_100",
    "advanced_50",
]
