[package]
name = "level-1_0"
version = "0.1.0"
authors = ["MasuqaT <occar@hotmail.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "no24"
path = "src/no24.rs"

[[bin]]
name = "no104"
path = "src/no104.rs"

[[bin]]
name = "no227"
path = "src/no227.rs"

[[bin]]
name = "no345"
path = "src/no345.rs"
