[package]
name = "level-2_0"
version = "0.1.0"
authors = ["MasuqaT <occar@hotmail.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "no3"
path = "src/no3.rs"

[[bin]]
name = "no7"
path = "src/no7.rs"

[[bin]]
name = "no45"
path = "src/no45.rs"

[[bin]]
name = "no65"
path = "src/no65.rs"

[[bin]]
name = "no115"
path = "src/no115.rs"

[[bin]]
name = "no144"
path = "src/no144.rs"

[[bin]]
name = "no157"
path = "src/no157.rs"

[[bin]]
name = "no179"
path = "src/no179.rs"

[[bin]]
name = "no197"
path = "src/no197.rs"

[[bin]]
name = "no198"
path = "src/no198.rs"

[[bin]]
name = "no228"
path = "src/no228.rs"

[[bin]]
name = "no250"
path = "src/no250.rs"

[[bin]]
name = "no290"
path = "src/no290.rs"

[[bin]]
name = "no312"
path = "src/no312.rs"

[[bin]]
name = "no314"
path = "src/no314.rs"

[[bin]]
name = "no316"
path = "src/no316.rs"

[[bin]]
name = "no327"
path = "src/no327.rs"

[[bin]]
name = "no351"
path = "src/no351.rs"

[[bin]]
name = "no365"
path = "src/no365.rs"

[[bin]]
name = "no374"
path = "src/no374.rs"

[[bin]]
name = "no420"
path = "src/no420.rs"

[[bin]]
name = "no482"
path = "src/no482.rs"

[[bin]]
name = "no500"
path = "src/no500.rs"

[[bin]]
name = "no509"
path = "src/no509.rs"

[[bin]]
name = "no561"
path = "src/no561.rs"

[[bin]]
name = "no615"
path = "src/no615.rs"

[[bin]]
name = "no672"
path = "src/no672.rs"

[[bin]]
name = "no806"
path = "src/no806.rs"
